@@ -10,6 +10,11 @@ include template/player-nav.pug
 					.v
 						span= seasons
 
+				.block.games
+					.k Games
+					.v
+						span= games
+
 				.block.winrate
 					.k Winrate
 					.v
